# dsa110-operator

./: .env.example  .gitignore  README.md  pyproject.toml
config/: egress_allowlist.yaml  local.yaml.example  policy.yaml
deploy/: README.md  dsa110-operator-supervisor-h23.service  dsa110-operator-supervisor.service  dsa110-operator-tunnel.service  dsa110-operator-web.service
docs/: CAPABILITIES.md  INSTALL.md  OPERATOR_AGENT.md  USAGE.md
scripts/: h23_supervisor.sh  install_service.sh  laptop.sh  shakeout.py
src/dsa_operator/: __init__.py  dashboard.py  env.py  policy.py  preflight.py
src/dsa_operator/agent/: __init__.py  base.py  claude.py  context.py  control.py  stub.py
src/dsa_operator/audit/: __init__.py  egress.py  etcd_sink.py  log.py  slack.py
src/dsa_operator/control/: __init__.py  approvals.py  authority.py  engine.py  executors.py  lease.py  preflight.py  verbs.py
src/dsa_operator/etcd/: __init__.py  read.py  write.py
src/dsa_operator/monitor/: __init__.py  health.py  injection.py  recovery.py  supervisor.py
src/dsa_operator/observing/: __init__.py  astro.py  plan.py  runner.py  session.py
src/dsa_operator/tools/: __init__.py  readonly.py
src/dsa_operator/transport/: __init__.py  ssh_tunnel.py
src/dsa_operator/web/: __init__.py  app.py  auth_google.py  identity.py
src/dsa_operator/web/templates/: console.html  login.html
tests/: conftest.py  test_agent.py  test_agent_control.py  test_approvals.py  test_audit.py  test_authority.py  test_control_engine.py  test_egress.py  test_env.py  test_etcd_read.py  test_executors.py  test_identity.py  test_lease.py  test_monitor.py  test_observing.py  test_policy.py  test_policy_gates.py  test_preflight.py  test_readonly_tools.py  test_session.py  test_ssh_tunnel.py  test_web_console.py  test_web_control.py
