[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa110-operator"
version = "0.0.1"
description = "Agent-driven control + monitoring console for the DSA-110 real-time system (talks to h23 over SSH only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# The live etcd read client. Kept optional so the package imports (and
# the test suite runs against fakes) on a laptop without etcd3.
etcd = ["etcd3>=0.12"]
# Phase 1+: web console + Google SSO + the Claude agent. Declared now
# so the surface is documented; not imported by the Phase-0 read path.
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]
agent = ["claude-agent-sdk>=0.1"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
