[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dsa110-operator"
version = "0.0.1"
description = "Agent-driven control + monitoring console for the DSA-110 real-time system (talks to h23 over SSH only)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.28",
]

[project.optional-dependencies]
# The live etcd read client. Kept optional so the package imports (and
# the test suite runs against fakes) on a laptop without etcd3.
etcd = ["etcd3>=0.12"]
# Web console (local-only, no SSO). Flask to match the dsa_monitor house
# style; itsdangerous backs the signed session cookie.
web = [
    "flask>=2.2",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
]
# The Claude brain (laptop, the operator's own Anthropic account). Uses the
# `anthropic` Messages API client directly (see dsa_operator/agent/claude.py).
# The web console falls back to a deterministic stub agent when this/the key
# is absent, so monitoring + Q&A still work in dev/CI.
agent = ["anthropic>=0.39"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
